--- a/runner/Dockerfile.gvisor
+++ b/runner/Dockerfile.gvisor
@@ -1,5 +1,7 @@
 FROM busybox:glibc
 
-COPY ./runner /usr/local/bin/runner
+ARG BUILD_DIR
+
+COPY ${BUILD_DIR}/runner /usr/local/bin/runner
 
 ENTRYPOINT ["/usr/local/bin/runner"]
