--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 static/vendor/* linguist-language=ignore
-static/css/tailwind.css/* linguist-language=ignore
+static/css/tailwind.css linguist-language=ignore
